# flatiron-ccn-workshop-2025

./: .gitignore  LICENSE  README.md  pyproject.toml
binder/: environment-cuda.yml  environment.yml  postBuild  start
data/: README.md
docs/: Makefile
docs/source/: can_you_read.md  conf.py  index.md
docs/source/_static/: custom.css
docs/source/full/day1/: fundamentals_of_pynapple.md  head_direction.md  phase_precession.md  phase_preferences.md
docs/source/full/day2/: current_injection.md  head_direction.md  model_selection.md  place_cells.md
docs/source/presenters/day1/: fundamentals_of_pynapple-presenters.md  head_direction-presenters.md  phase_precession-presenters.md
docs/source/presenters/day2/: current_injection-presenters.md  head_direction-presenters.md  place_cells-presenters.md
docs/source/users/day1/: fundamentals_of_pynapple-users.md  head_direction-users.md  phase_precession-users.md
docs/source/users/day2/: current_injection-users.md  head_direction-users.md  place_cells-users.md
jenkins/: Dockerfile  Jenkinsfile
notebooks/day1/: fundamentals_of_pynapple-users.ipynb  head_direction-users.ipynb  phase_precession-users.ipynb
notebooks/day2/: current_injection-users.ipynb  head_direction-users.ipynb  place_cells-users.ipynb
scripts/: check_setup.py  setup.py  strip_text.py  strip_text.sh
src/workshop_utils/: __init__.py  feature_mask.py  fetch.py  plotting.py
